# sndr_core_engine

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Makefile  NOTICE  README.md  SECURITY.md  __init__.py  conftest.py  constraints.txt  gemma4.py  genesis_bench_all_PN12X_active.json  genesis_bench_all_PN12X_active.md  genesis_bench_all_fp8_off.json  genesis_bench_all_fp8_off.md  genesis_bench_baseline_5run_v2.json  genesis_bench_baseline_5run_v2.md  genesis_bench_baseline_pn132_133.json  genesis_bench_baseline_pn132_133.md  genesis_bench_baseline_postPN125-not-active.json  genesis_bench_baseline_postPN125-not-active.md  genesis_bench_clean_rollback.json  genesis_bench_clean_rollback.md  genesis_bench_clean_rollback_warm.json  genesis_bench_clean_rollback_warm.md  genesis_bench_ctx_320K_full_restore.json  genesis_bench_ctx_320K_full_restore.md  genesis_bench_dev371_no_probab.json  genesis_bench_dev371_no_probab.md  genesis_bench_envs_only_pn125_off.json  genesis_bench_envs_only_pn125_off.md  genesis_bench_full_warmup_pn126_127_128_129_130.json  genesis_bench_full_warmup_pn126_127_128_129_130.md  genesis_bench_full_warmup_warm.json  genesis_bench_full_warmup_warm.md  genesis_bench_k3_ncclwarmup.json  genesis_bench_k3_ncclwarmup.md  genesis_bench_known_good_final.json  (+149 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  community_config.md  numbers-from-your-rig.yml
.github/workflows/: codeql.yml  doc_sync.yml  drift_check.yml  gui_web.yml  lint.yml  pages.yml  pip_audit.yml  release.yml  test.yml  upstream_audit_status.yml  upstream_drift_watcher.yml
_g4_19b_sync/: _per_patch_dispatch.py  env.py  g4_19b_gemma4_tq_kv_spec_integration.py  registry.py
_g4_packed_sync/: g4_tq_packed_triton.py
_g4_sync/: env.py  gemma-4-26b-a4b-it-awq.yaml  gemma-4-31b-it-awq.yaml  registry.py
_g4_sync_inflight/: _per_patch_dispatch.py  registry.py
_g4_sync_v2/: _per_patch_dispatch.py
assets/: README.md
assets/charts/: _generate.py  _og_card.py
assets/chat_templates/: README.md
benchmarks/data/: gsm8k_200.jsonl  quality_33.jsonl
benchmarks/harness/: README.md  __init__.py  _common.py  cuda_graph_recapture.py  gsm8k_regression.py  long_context_oom.py  offline_api_parity.py  quality_harness.py  run_all.py  tgs_decode.py
compose/: docker-compose.full.yml  docker-compose.integration-awq.yml  docker-compose.integration-fp16kv.yml  docker-compose.integration.yml  docker-compose.test-v11.yml  docker-compose.unit.yml  long-ctx-27b.yml  prod-27b-tq-multiconc.yml  prod-27b-tq.yml  prod-35b-multiconc.yml  prod-35b.yml
compose/_archive/: README.md  long-ctx-27b.yml
deploy/host/: nvidia-power-cap.service
deploy/memory/: Dockerfile  run.sh  (+2 more)
docs/: ADDING_MODELS.md  ANCHOR_SOT.md  ANNOUNCEMENT_TEMPLATE.md  ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_GUIDE.md  CLI_REFERENCE.md  COMPARISONS.md  CONFIGS.md  CONFIGS_AUTO.md  CONFIGURATION.md  CONTRIBUTING.md  COOKBOOK.md  CORE_ENGINE_BOUNDARY.md  CREDITS.md  FAQ.md  GETTING_STARTED.md  GLOSSARY.md  GUI.md  GUI_ROADMAP.md  GUI_SECURITY.md  HARDWARE.md  HOST_SETUP.md  INSTALL.md  KV_PROJECTOR.md  LICENSE_POLICY.md  LOCAL_AI_PRIMER.md  MCP.md  MODELS.md  MODEL_CONFIG_LAUNCHER.md  OPERATIONS.md  PATCHES.md  PATCHES_AUTO.md  PATCH_DESIGNS.md  PHASE7_RESEARCH_TRACK.md  PIN_BUMP_PLAYBOOK.md  PRESETS.md  PRODUCT_API.md  QUALITY_GATE.md  QUICKSTART.md  (+14 more)
gui/: GUI_ROADMAP.md  SNDR_BACKEND_HANDOFF.md  SNDR_CHAT_WEBSEARCH_HANDOFF.md
release/: SBOM.spdx.json  constraints.txt
schemas/: patch_entry.schema.json
scripts/: attach_bench_proof.py  audit_ai_attribution.py  audit_anchor_fragility.py  audit_artifacts.py  audit_bench_methodology.py  audit_claim_provenance.py  audit_config_catalog.py  audit_config_keys.py  audit_configs.py  audit_dispatcher_migration_readiness.py  audit_docs_refs_in_source.py  audit_engine_boundary.py  audit_english_only.baseline.json  audit_english_only.py  audit_env_flag_consumers.py  audit_evidence_freshness.py  audit_external_findings.py  audit_generated_config_catalog.py  audit_generated_links.py  audit_i18n.py  audit_launch_coverage.py  audit_legacy_vs_spec_driven_apply_matrix.py  audit_license_anchor.py  audit_lifecycle_docstring_sync.py  audit_lifecycle_triage.py  audit_links.py  audit_model_baselines.py  audit_no_hardcoded_paths.py  audit_no_new_v1.py  audit_no_stub.py  audit_override_policy.py  audit_patch_attribution.py  audit_patch_plan_resolves.py  audit_patch_targets_exist.py  audit_phase3_relocation.py  audit_pin_consistency.py  audit_plan_supersession.py  audit_pn59_cliff2b_markers.py  audit_pn95_tier_configs.py  audit_private_namespace.py  (+71 more)
sndr/: __init__.py  __main__.py  brand.py  caveats.py  config.py  env.py  exceptions.py  license.py  pins.py  pins.yaml  plugin.py  runtime_tunables.py  version.py
tests/: README.md  conftest.py
tools/: _trace_qwen3_stream_repro.py  audit_broken_patches.py  audit_yaml_vs_runtime.sh  bench_agentic.py  bench_decode_tpot_clean_ab.py  bench_live_35b.py  bench_multiturn_tps.py  check_upstream_drift.py  check_upstream_watchlist.py  ctx_depth_sweep_bench.py  cudagraph_mem_estimate_ab.py  drift_check.py  endurance_probe.py  extract_candidate_tree.sh  g4_tool_bench.py  gateway_smoke_test.py  gen_memory_diagrams.py  genesis_bench_suite.py  genesis_chat_matrix_bench.py  genesis_full_bench.py  genesis_report.sh  kv_calc.py  license_keygen.py  lint_cross_patch_allowlist.txt  lint_drift_markers.py  lint_drift_markers_allowlist.txt  long_ctx_smoke.sh  manifest_gen.py  memory_observability.sh  migrate_module.py  migrate_patches.py  migrate_vllm_sndr_core_to_sndr.py  multi_conc_bench.py  openai_smoke.py  pin_preflight.py  pin_runtime_contract.py  populate_manifest_md5.py  progressive_context_probe.py  propose_reanchors.py  registry_version_audit.py  (+11 more)
tools/examples/genesis-plugin-hello-world/: README.md  pyproject.toml
tools/examples/genesis-plugin-hello-world/genesis_plugin_hello_world/: __init__.py  plugin.py
tools/genesis_vllm_plugin/: README.md  pyproject.toml
tools/genesis_vllm_plugin/genesis_v7/: __init__.py
(+5683 files in other folders)
