# SPDX-License-Identifier: Apache-2.0
#
# Root `pyproject.toml` for SNDR Core — Phase 3 (F-003 audit fix, 2026-05-08).
#
# This makes the project pip-installable as `sndr-core` (alias `genesis-vllm-patches`)
# with a `sndr` console entry point. The legacy `genesis` console name from
# `tools/genesis_vllm_plugin/pyproject.toml` continues to work as an alias
# for the transition window.
#
# Build-time intent
# ─────────────────
# This package ships:
#   - `vllm/sndr_core/` — all canonical implementation (Apache 2.0)
#
# It does NOT ship:
#   - `vllm/sndr_engine/` — commercial tier; built as a SEPARATE wheel
#     from `pyproject-engine.toml` (E-04 fix, 2026-05-08).
#   - `tests/` — pytest suite stays out of the wheel
#   - Internal docs / benchmarks / dev scripts
#
# Usage
# ─────
#   pip install -e .                 # editable install for development
#   pip install vllm-sndr-core       # from PyPI when published
#
# After install:
#   sndr install                     # interactive setup wizard
#   sndr launch <preset>             # launch vllm with a preset
#   sndr doctor                      # health check
#   sndr verify                      # post-apply verification
#
# Author: Sandermage(Sander)-Barzov Aleksandr, Ukraine, Odessa.

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "vllm-sndr-core"
# Source of truth: vllm/sndr_core/version.py SNDR_CORE_VERSION.
# Bump there + here together on each release.
version = "11.0.0"
description = "SNDR Core / Genesis runtime patcher for vLLM — Apache-licensed community tier."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Sandermage(Sander)-Barzov Aleksandr", email = "sander.odessa@gmail.com"},
]
keywords = ["vllm", "llm", "inference", "patches", "turboquant", "genesis", "sndr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# DA-007 (audit 2026-05-08): minimum self-contained runtime deps.
# Previously `dependencies = []` assumed PyYAML came in via vllm — but
# `pip install vllm-sndr-core` in a clean venv (without vllm yet
# installed) would fail at first `import yaml`. Now declare the bare
# minimum so the wheel is genuinely self-contained.
#
# Optional deps (HTTP probes, telemetry, license signing) are surfaced
# as extras under [project.optional-dependencies].
dependencies = [
    "pyyaml>=6.0",      # model_configs YAML loader, host.yaml parser
    "packaging>=23.0",  # version compat checks in license + drift watcher
]

[project.optional-dependencies]
# `pip install vllm-sndr-core[dev]` for development tooling.
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "cryptography>=41.0",  # signed-license token verification
]
# `pip install vllm-sndr-core[http]` for upstream PR drift watcher,
# image-digest verification, and outbound telemetry signals.
http = [
    "requests>=2.28",
]
# `pip install vllm-sndr-core[gui-api]` for the local read-only Product
# API daemon consumed by GUI/web/desktop clients. Authentication (local
# accounts, TOTP 2FA, sessions, OAuth) uses only the standard library — no
# extra dependency. The optional PAM backend (system-account login on a host)
# needs `python-pam`; install the `gui-auth-pam` extra to enable it.
gui-api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
# `pip install vllm-sndr-core[gui-remote]` for the GUI's remote-host features:
# SSH/SFTP connectivity + checks, an embedded PTY terminal, and encrypted
# at-rest storage of SSH passwords / engine API keys. All optional — the daemon
# imports and runs without these; the remote features simply report unavailable.
gui-remote = [
    "paramiko>=3.0",       # SSH/SFTP transport + interactive PTY channel
    "cryptography>=41.0",  # Fernet encryption for the at-rest secrets fallback
    "keyring>=24.0",       # OS keychain backend (preferred over the file fallback)
    "websockets>=12.0",    # PTY terminal transport (uvicorn websocket protocol)
]
# `pip install vllm-sndr-core[gui-auth-pam]` to authenticate GUI logins against
# the host's system accounts via PAM (host deployments only; in a container PAM
# sees the container's users unless host auth files are bind-mounted).
gui-auth-pam = [
    "python-pam>=2.0",
]
# `pip install vllm-sndr-core[telemetry]` for opt-in usage reporting.
# Telemetry stays opt-in — base install does not include it.
telemetry = [
    "requests>=2.28",
]
# `pip install vllm-sndr-core[license]` for signed-token verification.
license = [
    "cryptography>=41.0",
]

[project.urls]
Homepage = "https://github.com/Sandermage/genesis-vllm-patches"
Issues = "https://github.com/Sandermage/genesis-vllm-patches/issues"
Changelog = "https://github.com/Sandermage/genesis-vllm-patches/blob/main/CHANGELOG.md"

[project.scripts]
# Phase 3 (F-003 audit fix, 2026-05-08): canonical CLI entry point.
# `sndr` is the new name; `genesis` is preserved as a back-compat alias
# (operators trained on the legacy command keep using it without a
# rename). The plugin package `tools/genesis_vllm_plugin/` also maps
# `genesis` → `vllm.sndr_core.compat.cli:main` since v11.0.0.
sndr = "vllm.sndr_core.cli:cli_main"
genesis = "vllm.sndr_core.compat.cli:main"
# v12.0 sndr-platform: new modular CLI (engines.list / engines.info / pins.list / health).
# `sndr-v2` is provided alongside `sndr` during the v12.x window — once the
# legacy command tree is fully retired in v13.0, `sndr` will repoint to the
# v2 entry point and `sndr-v2` will be removed.
sndr-v2 = "sndr.cli.main:main"

[project.entry-points."vllm.general_plugins"]
# P0-6 fix (audit 2026-05-08): canonical entry point lives in the core
# package. Previously this said `genesis_v7:register`, but the
# `genesis_v7` package was NOT in the core wheel — it shipped only
# from `tools/genesis_vllm_plugin/`. After `pip install vllm-sndr-core`
# the entry point pointed at a non-existent module and vllm logged a
# plugin-failed-to-load warning at boot.
#
# `vllm.sndr_core.plugin:register` is canonical; the standalone
# `tools/genesis_vllm_plugin/` package now thin-re-exports from this
# module for back-compat with v7.x operators who installed it
# separately.
genesis_v7 = "vllm.sndr_core.plugin:register"


# ─── Setuptools package layout ────────────────────────────────────────────

[tool.setuptools.packages.find]
# v12.0 sndr-platform: namespace-package mode is required because
#   1. `vllm/` is a PEP 420 implicit namespace (no top-level __init__.py),
#      so we extend the upstream `vllm.*` namespace with `vllm.sndr_core.*`.
#   2. `sndr/` is a regular package (has __init__.py), but namespaces=true
#      remains backward-compatible for regular packages.
namespaces = true
where = ["."]
# E-04 fix (audit 2026-05-08): the Apache wheel no longer includes
# `vllm.sndr_engine*`. Engine code is built separately via
# `pyproject-engine.toml` under a commercial license.
include = [
    "vllm.sndr_core*",
    # v12.0 sndr-platform: new top-level package (multi-engine architecture).
    # Co-exists with vllm.sndr_core* for backward compatibility — shims in
    # vllm/sndr_core/ re-export from sndr/. Both must ship in the wheel.
    "sndr*",
]
# Explicit exclusions: tests, internal docs, dev scripts, engine pkg,
# archived legacy folders.
exclude = [
    "tests*",
    "docs*",
    "scripts*",
    "snapshots*",
    "vllm.sndr_engine*",
    "tools.genesis_vllm_plugin.tests*",
    # The commercial engine tier remains a separate wheel.
    "sndr.engine*",
    # `sndr_private/` carries internal planning docs, license-server source,
    # and pre-release patch drafts — must not ship in the Apache wheel.
    "sndr_private*",
]

[tool.setuptools.package-data]
# v12.0: sndr-platform data files (per-pin manifests, GUI bundles, schemas).
"sndr" = [
    # Per-pin manifest YAMLs — drift detector + manifest_gen consume these.
    "engines/*/pins/*/manifest.yaml",
    # Bundled launcher / config templates for the universal launcher.
    "engines/*/launchers/*.sh.j2",
    "engines/*/configs/*.yaml",
    # JSON schemas for license tokens and config validation.
    "schemas/*.json",
    # GUI static bundle (built by `make gui-build`, served by the legacy
    # product_api the daemon resolves from `legacy/web_static`). v12.x moved
    # it here from vllm/sndr_core/product_api/web_static.
    "product_api/legacy/web_static/*",
    "product_api/legacy/web_static/assets/*",
]
"vllm.sndr_core" = [
    # V1 monolithic top-level (12 files; legacy compat, sunset planned).
    "model_configs/builtin/*.yaml",
    # P0.1 M.1 (audit 2026-05-24): V2 layered configs in subdirs.
    # Pre-fix wheel inspection: 0/4 V2 subdirs packaged → CLI `sndr preset list`
    # returned empty on pip-installed wheel. Defended by tests/unit/test_wheel_contents.py (M.2).
    "model_configs/builtin/model/*.yaml",
    "model_configs/builtin/hardware/*.yaml",
    "model_configs/builtin/profile/*.yaml",
    "model_configs/builtin/presets/*.yaml",
    "model_configs/community/*.yaml.sample",
    # CONFIG-UX.4.1 (audit 2026-05-24): V1 migration table — frozen
    # JSON resource consumed by `_rollout.py` + `audit_v1_migration.py`.
    "model_configs/_v1_migration_table.json",
    "manifests/*.json",
    "configs/moe_tuning/*.yaml",
    "configs/moe_tuning/*.json",
    # P1-2 (audit 2026-05-08): JSON schema for PATCH_REGISTRY entries.
    # Was at repo-root `schemas/`; relocated into the package so wheel
    # installs work without the source tree present.
    "schemas/*.json",
    # NOTE: the GUI bundle moved to the `sndr` package in v12.x
    # (sndr/product_api/legacy/web_static); it is packaged under the
    # "sndr" key above, not here.
]


# ─── Pytest config (mirrors the standalone pytest.ini at repo root) ──────

[tool.pytest.ini_options]
# Discovery roots — two during the v11 transition:
#   tests/              — canonical layout (post-Phase-2 relocation)
#   tests/legacy/       — pre-v11 tests not yet relocated (~63 files
#                          remain; cosmetic-only relocation is deferred)
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "cuda_required: test requires NVIDIA CUDA device",
    "rocm_required: test requires AMD ROCm device",
    "gpu_required: test requires any GPU (CUDA or ROCm)",
    "slow: test takes >5 seconds",
    "requires_torch: test imports torch — auto-skipped without torch (audit A-15)",
    "integration: end-to-end with live container",
]
addopts = [
    "-ra",
    "--tb=short",
    "--strict-markers",
]
