[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-vllm-plugin"
version = "7.0.0.dev0"
description = "Genesis v7.0 runtime patcher for vLLM — registered as vllm.general_plugins entry point so it auto-loads in every process (main/engine-core/worker)."
requires-python = ">=3.10"
authors = [
    {name = "Sandermage(Sander)-Barzov Aleksandr", email = "sander.odessa@gmail.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
# No runtime deps — the plugin assumes vllm is available at import time.
# Our orchestrator imports sndr/* which is mounted in the container.
dependencies = []

[project.entry-points."vllm.general_plugins"]
# Official vLLM plugin system automatically calls this at process start —
# in process0, engine core, AND every worker rank. Perfect place for
# Genesis wiring because it runs BEFORE model load and has full access
# to the target vllm.* import tree.
#
# UNIFIED ROOT BUG fix (2026-06-22): point this at the canonical
# `sndr.plugin:register` (same target as the ROOT pyproject), NOT the
# bare `genesis_v7:register` shim. The shim in `genesis_v7/__init__.py`
# only delegates to `sndr.plugin.register` anyway, but registering the
# shim target meant that if `sndr` was not importable the in-process
# plugin silently did nothing. Targeting `sndr.plugin:register` directly
# makes the canonical apply path the single source of truth — installing
# EITHER this legacy subdir OR the sndr repo root now registers the SAME
# in-process plugin, so vllm serve re-applies runtime monkey-patches
# (incl. g4_85) in the serving process.
#
# NOTE: the PROD-intended path is to bake the `sndr` wheel into the image
# (its root pyproject already registers this entry-point). This legacy
# subdir exists only for back-compat with v7.x operators who pip-installed
# the standalone plugin package.
genesis_v7 = "sndr.plugin:register"

[project.scripts]
# Two console commands are exposed, routing to the two CLI dispatchers
# (v12: the ``vllm.sndr_core`` namespace moved to top-level ``sndr``):
#
#   `sndr`     — post-rebrand command tree (``sndr.cli.legacy``).
#                Subcommands: launch, doctor, verify, model-config,
#                patches, memory, install, deps, model, upstream, ...
#                Operators should default to this command.
#
#   `genesis`  — legacy compat-layer CLI (``sndr.compat.cli``).
#                Subcommands: doctor, verify, preset, explain, ...
#                Kept for back-compat with v7.x operators and docs.
#
# Both require ``sndr`` on PYTHONPATH (install.sh wires it in;
# alternatively set PYTHONPATH manually).
sndr    = "sndr.cli.legacy:cli_main"
genesis = "sndr.compat.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["genesis_v7*"]
