[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-plugin-hello-world"
version = "0.1.0"
description = "Reference Genesis plugin — minimal end-to-end example"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Genesis docs"}]
dependencies = []

[project.entry-points."vllm_genesis_patches"]
hello_world = "genesis_plugin_hello_world.plugin:get_patch_metadata"

[tool.setuptools.packages.find]
include = ["genesis_plugin_hello_world*"]
